[package]
name = "oak"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.3"
bevy_flycam = "0.15.0"
crossbeam-channel = "0.5.14"
nalgebra = "0.33.2"
rand = "0.9.0"
bevy_image_export = "0.12.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
bevy_image = "0.15.0"
colorous = "1.0.16"
kiddo = "5.0.3"
az = "1.2.1"
